[gd_scene load_steps=2 format=3 uid="uid://d0k0l7gq2x0r"]

[ext_resource type="Script" uid="uid://cwqg7gik8gqmy" path="res://scripts/tuto_menu.gd" id="1_75laa"]

[node name="TutoMenu" type="Node2D"]
position = Vector2(-306.5, -156.5)
script = ExtResource("1_75laa")

[node name="Background" type="Panel" parent="."]
self_modulate = Color(0, 0, 0, 1)
offset_right = 611.0
offset_bottom = 311.0

[node name="Space" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 612.0
offset_bottom = 311.0

[node name="Content" type="Label" parent="Space"]
layout_mode = 0
offset_left = 58.0
offset_top = 35.0
offset_right = 554.0
offset_bottom = 188.0
text = "Les bases

Dans ce jeu tu vas incarner un auditeur, une personne chargée 
de {définir ce qu'est un audit}. Dans le jeu (perdu!) chaque étape
de la création d'un audit se fait en cliquant sur des éléments 
de l'interface"
horizontal_alignment = 1
text_overrun_behavior = 2

[node name="NextButton" type="Button" parent="Space"]
layout_mode = 0
offset_left = 255.5
offset_top = 261.5
offset_right = 357.5
offset_bottom = 292.5
text = "Continuer"
icon_alignment = 1

[connection signal="mouse_entered" from="Space/NextButton" to="." method="_on_next_button_mouse_entered"]
[connection signal="mouse_exited" from="Space/NextButton" to="." method="_on_next_button_mouse_exited"]
[connection signal="pressed" from="Space/NextButton" to="." method="_on_next_button_pressed"]
